@@ -22,6 +22,19 @@ task bintrayCredentialsCheck {
   }
 }
 
+def baseJvmArgs = [
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "-XX:-MaxFDLimit"
+]
+project.ext.set("baseJvmArgs", baseJvmArgs)
+
 allprojects {
   apply plugin: "java"
   apply plugin: "jacoco"
@@ -77,10 +90,12 @@ allprojects {
     
   compileJava {
     options.compilerArgs += "-proc:none"
+    options.compilerArgs += "-Xlint:unchecked"
   }
 
   compileTestJava {
     options.compilerArgs += "-proc:none"
+    options.compilerArgs += "-Xlint:unchecked"
     options.compilerArgs += "-Xlint:deprecation"
   }
   
@@ -89,36 +104,18 @@ allprojects {
     options.incremental = true
   }
   
-  def testJvmArgs = [
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-    "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-  ]
-
   test {
     exclude "**/*IT.class"
-    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-      jvmArgs += testJvmArgs
-    }
+    jvmArgs += baseJvmArgs
   }
   
   task integrationTest(type: Test, description: "Runs integration tests", group: "Verification") {
     include "**/*IT.class"
-    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-      jvmArgs += testJvmArgs
-    }
+    jvmArgs += baseJvmArgs
   }
 
   jacoco {
-    toolVersion = "0.8.2"
-  }
-  
-  javadoc {
-    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-      options.addStringOption("quiet", "-html5")
-    }
+    toolVersion = "0.8.3"
   }
   
   task verify {  
@@ -200,28 +197,21 @@ dependencies {
   testRuntime "com.obsidiandynamics.fulcrum:fulcrum-launcher:${fulcrumVersion}"
 }
 
-project.ext.set("launcherClasspath", new org.gradle.api.internal.file.UnionFileCollection())
-project.ext.set("launcherClasses", new ArrayList())
-
-task addLauncherApps() {
-  project(":").launcherClasspath += sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-  project(":").launcherClasses += "com.obsidiandynamics.blackstrom.ledger.MultiNodeQueueLedgerTest"
-  project(":").launcherClasses += "com.obsidiandynamics.blackstrom.scheduler.TaskSchedulerTest"
-}
-
-task launch() {
-  dependsOn allprojects*.tasks*.findByName("testClasses")
+task launch(dependsOn: testClasses) {
   doLast {
-    def baseJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
-                      "-XX:-UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
+    def launcherClasses = new ArrayList()
+    launcherClasses += "com.obsidiandynamics.blackstrom.ledger.MultiNodeQueueLedgerTest"
+    
+    def perfJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
+                      "-XX:+UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
                       "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
                       "-Dlauncher.package.compress.level=3"
     javaexec {
       systemProperties = System.properties
-      classpath = project(":").launcherClasspath
+      classpath = sourceSets.test.runtimeClasspath
       main = "com.obsidiandynamics.launcher.Launcher"
-      args = project(":").launcherClasses
-      jvmArgs = Arrays.asList baseJvmArgs.split(" ")
+      args = launcherClasses
+      jvmArgs = Arrays.asList(perfJvmArgs.split(" ")) + baseJvmArgs
       standardInput = System.in
     }
   }
