@@ -19,14 +19,31 @@ dependencies {
   testCompile "com.obsidiandynamics.fulcrum:fulcrum-select:${fulcrumVersion}"
   testCompile "com.obsidiandynamics.jackdaw:jackdaw-assurance:${jackdawVersion}"
   testCompile "org.jgroups:jgroups:${jgroupsVersion}"
+  
+  testRuntime "com.obsidiandynamics.fulcrum:fulcrum-launcher:${fulcrumVersion}"
 }
 
-task addLauncherApps() {
-  project(":").launcherClasspath += sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-  project(":").launcherClasses += "com.obsidiandynamics.blackstrom.bank.KafkaKryoRandomBankTransferIT"
-  project(":").launcherClasses += "com.obsidiandynamics.blackstrom.bank.KafkaJacksonRandomBankTransferIT"
-  project(":").launcherClasses += "com.obsidiandynamics.blackstrom.ledger.KafkaKryoLedgerIT"
-  project(":").launcherClasses += "com.obsidiandynamics.blackstrom.ledger.KafkaJacksonLedgerIT"
+task launch(dependsOn: testClasses) {
+  doLast {
+    def launcherClasses = new ArrayList()
+    launcherClasses += "com.obsidiandynamics.blackstrom.bank.KafkaKryoRandomBankTransferIT"
+    launcherClasses += "com.obsidiandynamics.blackstrom.bank.KafkaJacksonRandomBankTransferIT"
+    launcherClasses += "com.obsidiandynamics.blackstrom.ledger.KafkaKryoLedgerIT"
+    launcherClasses += "com.obsidiandynamics.blackstrom.ledger.KafkaJacksonLedgerIT"
+    
+    def perfJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
+                      "-XX:+UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
+                      "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
+                      "-Dlauncher.package.compress.level=3"
+    javaexec {
+      systemProperties = System.properties
+      classpath = sourceSets.test.runtimeClasspath
+      main = "com.obsidiandynamics.launcher.Launcher"
+      args = launcherClasses
+      jvmArgs = Arrays.asList(perfJvmArgs.split(" ")) + baseJvmArgs
+      standardInput = System.in
+    }
+  }
 }
 
 jar {
